service-v3.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-v3
  namespace: cf-workloads
spec:
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 8080
  selector:
    guid: dc934dca-f24c-4a9e-bb15-74639f86be0a
